Copied code from Redis binding for BZS testing.

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -271,6 +271,12 @@ LICENSE file.
       <version>${project.version}</version>
     </dependency>
 -->
+    <dependency>
+      <groupId>com.yahoo.ycsb</groupId>
+      <artifactId>bzs-binding</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
